Added a link between About Me and the Home page

--- a/About Me/index.html
+++ b/About Me/index.html
@@ -40,5 +40,11 @@
       scripture is likely common and is in Doctrine and Covenants 6:36 and states
       "Look unto me in every thought; doubt not, fear not."
     </p>
+
+    <h1>
+      <a href="../index.html">Return</a>
+    </h1>
+    
   </body>
+
 </html>
