fixed aboutme page

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>About Me Page</title>
-    <link rel="stylesheet" href="Styles/style.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
     <div class="header">
       Elijah Foard
     </div>
@@ -10,7 +10,7 @@
   
   <body>
     <h1>
-      <img src="Images/604FA27A-4A9C-4E43-80DC-E86390E0E285.jpg" alt="Picture of me">
+      <img src="./images/604FA27A-4A9C-4E43-80DC-E86390E0E285.jpg" alt="Picture of me">
     </h1>
     <h1>
       About Me
