--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 Home Page</title>
+    <a href = index.html>
+      <img alt = "random animal image" src="https://placeimg.com/320/240/animals">
+    </a>
 </head>
 
 <body>
@@ -14,7 +17,7 @@
 <nav>
   <a href="./aboutme/index.html">About Me Page</a>             
   <a href="./wwr/index.html">White Water Rafting Website</a>
-  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="./wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
