--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <title>About Me Page</title>
-    <link rel="stylesheet" href="./styles/style.css"/>
-    <div class="header">
-      Elijah Foard
-    </div>
+    <link rel="stylesheet" href="./styles/style.css">
+    
   </head>
   
   <body>
+    <div class="header">
+      Elijah Foard
+    </div>
     <h1>
       <img src="./images/604FA27A-4A9C-4E43-80DC-E86390E0E285.jpg" alt="Picture of me">
     </h1>
