--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class = "logo" src="images/logo.png" alt="Dry Oar Logo" width="10">
+                <img class = "logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
                 <a href="../index.html">Home</a>
@@ -23,7 +23,7 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting" width=100>
+                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
