--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,10 +29,10 @@
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar</h4>
                 <div class="button-box">
-                    <a class='book' href="rates.html">Book Now</a>
+                    <a class="book" href="rates.html">Book Now</a>
                 </div>
             </section>
-        </div>
+          </div>
         <main class="home-grid">
             <section class="rivers-card">
                 <img class="card-img" src="images/rivers.jpg" alt="river in forest" >
