--- a/personal/site-plan.html
+++ b/personal/site-plan.html
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Bot 2 <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Bot 3  <!-- change this -->
         </div>
 
         <div class="top">
