--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,8 +17,8 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="faq/index.html">FAQs</a>
-                <a href="./site-plan-rafting.html">Site Plan</a>
-                <a href="#">Contact Us</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus/contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
