--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </a>
   <h1>Welcome to WDD130 Web Projects</h1>
   <nav>
-    <a href="./aboutme/index.html">About Me Page</a>
+    <a href="aboutme/index.html">About Me Page</a>
     <a href="wwr/index.html">White Water Rafting Website</a>
-    <a href="./wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-    <a href="./positioning/positioning.html">Positioning Activity</a>
-    <a href="./personal/index.html">Personal Website</a>
-    <a href="./personal/site-plan.html">Personal Siteplan</a>
+    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+    <a href="positioning/positioning.html">Positioning Activity</a>
+    <a href="personal/index.html">Personal Website</a>
+    <a href="personal/site-plan.html">Personal Siteplan</a>
   </nav>
 </body>
 </html>
