added footers to each personal website page

--- a/personal/index.html
+++ b/personal/index.html
@@ -62,5 +62,8 @@
     <img src="images/joined.png" alt="joined">
 
     </main>
+    <footer>
+        <a href="site-plan.html">Site Plan</a>
+    </footer>
     </body>
 </html>
