--- a/personal/page2.html
+++ b/personal/page2.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles/page2.css">
 </head>
 <body>
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class = "logo" src="images/easybotlogo.png" alt="easybotlogo">
+        </a>
+        <div class="navbar">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#" id="active">Getting the Bot Online</a>
+                <a href="page3.html">Basic Commands</a>
+            </nav>
+        </div>
+    </header>
     <main>
         <h1>Getting the bot online</h1>
 
@@ -53,5 +65,8 @@
 
         <h2>Congratulations! Your bot is now online!</h2>
     </main>
+    <footer>
+        <a href="site-plan.html">Site Plan</a>
+    </footer>
 </body>
 </html>
