--- a/personal/page3.html
+++ b/personal/page3.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles/page3.css">
 </head>
 <body>
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class = "logo" src="images/easybotlogo.png" alt="easybotlogo">
+        </a>
+        <div class="navbar">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="page2.html">Getting the Bot Online</a>
+                <a href="#" id="active">Basic Commands</a>
+            </nav>
+        </div>
+    </header>
     <main>
         <h1>Basic message commands</h1>
 
@@ -29,5 +41,8 @@
         <h2>Congratulations! Your bot is now working! You can add as many of these commands as you would like!</h2>
         <img src="images/finalcode.png" alt="finalcode">
     </main>
+    <footer>
+        <a href="site-plan.html">Site Plan</a>
+    </footer>
 </body>
 </html>
