added css to personal page

--- a/personal/index.html
+++ b/personal/index.html
@@ -9,19 +9,21 @@
 </head>
 <body>
     <header>
-        <a id="logo_link" href="index.html">
+        <div class="navigation-header">
             <img class = "logo" src="images/easybotlogo.png" alt="easybotlogo">
-        </a>
-        <div class="navbar">
-            <nav>
-                <a href="#" id="active">Home</a>
-                <a href="page2.html">Getting the Bot Online</a>
-                <a href="page3.html">Basic Commands</a>
-            </nav>
+            <div class="navbar">
+                <nav>
+                    <a href="#" id="active">Home</a>
+                    <a href="page2.html">Getting the Bot Online</a>
+                    <a href="page3.html">Basic Commands</a>
+                </nav>
+            </div>
         </div>
+
     </header>
     <main>
-        <h2>Welcome to creating your first Discord bot using JavaScript! This tutorial will teach you everything, from creating the account for the bot, to writing a super simple command. Sometimes coding for the first time can be very intimidating but I hope to make this tutorial as open as possible, even for somebody who has never written a single line of code.</h2>
+        
+    <h2 class="intro">Welcome to creating your first Discord bot using JavaScript! This tutorial will teach you everything, from creating the account for the bot, to writing a super simple command. Sometimes coding for the first time can be very intimidating but I hope to make this tutorial as open as possible, even for somebody who has never written a single line of code.</h2>
     
     <h1>Creating the bot</h1>
 
