fixed hover effect on navigation bar

--- a/personal/index.html
+++ b/personal/index.html
@@ -37,10 +37,13 @@
     <img src="images/namebot.png" alt="namebot">
 
     <h2>Then you’ll see a page similar to this where you can add a profile picture, change the name of your bot,and add to your About Me section of the bot’s profile. On the left side, click on the “bot” tab and press “add bot” and “Yes, do it!”. Don’t worry about the warning. </h2>
-    <img src="images/generalinfo.png" alt="generalinformation">
-    <img src="images/settingsbot.png" alt="botsettings">
-    <img src="images/addbot.png" alt="addbot">
-    <img src="images/doit.png" alt="doit">
+    <div class="parent">
+    <img class="div1" src="images/generalinfo.png" alt="generalinformation">
+    <img class="div2"src="images/settingsbot.png" alt="botsettings">
+    <img class="div3" src="images/addbot.png" alt="addbot">
+    <img class="div4" src="images/doit.png" alt="doit">
+    </div>
+ 
 
     <h2>Now we’ll allow the bot to read messages sent. Scroll down on the bot page and turn on “message content intent” and save the changes.</h2>
     <img src="images/messageintent.png" alt="messageintent">
