--- a/personal/page2.html
+++ b/personal/page2.html
@@ -21,6 +21,7 @@
         </div>
     </header>
     <main>
+        <h2 class="intro">Now that you've created the bot, you'll have to code some interactions with it.</h2>
         <h1>Getting the bot online</h1>
 
         <h2>Here’s where the fun part happens. First you will need to install Node.js and follow the install instructions. Then, install a code editor, I suggest Visual Studio Code.</h2>
