--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Whitewater Rafting Vacations | Dry Oar Boarting | Home</title>
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class = "logo" src="images/logo.png" alt="Dry Oar Logo">
+                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
                 <a href="../index.html">Home</a>
@@ -33,24 +33,24 @@
                 </div>
             </section>
           </div>
-        <main class="home-grid">
+          <main class="home-grid">
             <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpg" alt="river in forest" >
-                <img class="icon" src="images/river_icon.png" alt="river icon" >
+                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
                 <h2>Rivers</h2>
             </section>
             <section class="camping-card">
-                <img class="card-img" src="images/mountains.jpg" alt="tent in mountains" >
-                <img class="icon" src="images/fire_icon.png" alt="fire icon" >
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpg" alt="rafting boat" >
-                <img class="icon" src="images/oars.png" alt="oars icon" >
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
                 <h2>Rapids</h2>
             </section>
             <div id="background"></div>
-            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" >
+            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
