fixed menu headings on subpages

--- a/personal/page2.html
+++ b/personal/page2.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header>
-        <a id="logo_link" href="index.html">
+        <div class="navigation-header">
             <img class = "logo" src="images/easybotlogo.png" alt="easybotlogo">
-        </a>
-        <div class="navbar">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="#" id="active">Getting the Bot Online</a>
-                <a href="page3.html">Basic Commands</a>
-            </nav>
+            <div class="navbar">
+                <nav>
+                    <a href="#" id="active">Home</a>
+                    <a href="page2.html">Getting the Bot Online</a>
+                    <a href="page3.html">Basic Commands</a>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
