--- a/personal/page3.html
+++ b/personal/page3.html
@@ -14,7 +14,7 @@
             <div class="navbar">
                 <nav>
                     <a href="index.html">Home</a>
-                    <a href="#" id="active">Getting the Bot Online</a>
+                    <a href="page2.html">Getting the Bot Online</a>
                     <a href="#" id="active">Basic Commands</a>
                 </nav>
             </div>
