--- a/personal/page2.html
+++ b/personal/page2.html
@@ -13,8 +13,8 @@
             <img class = "logo" src="images/easybotlogo.png" alt="easybotlogo">
             <div class="navbar">
                 <nav>
-                    <a href="#" id="active">Home</a>
-                    <a href="page2.html">Getting the Bot Online</a>
+                    <a href="index.html">Home</a>
+                    <a href="#" id="active">Getting the Bot Online</a>
                     <a href="page3.html">Basic Commands</a>
                 </nav>
             </div>
